--- a/nuevo-cliente.html
+++ b/nuevo-cliente.html
@@ -85,7 +85,7 @@
         </main>
     </div>
     <script src="js/funciones.js"></script>
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
     <script src="js/nuevocliente.js"></script>
 </body>
 </html>
